--- a/portal-frontend/src/app/features/edit-submission/proposal/naru-proposal/naru-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/naru-proposal/naru-proposal.component.html
@@ -378,7 +378,7 @@
         <label for="agriTourism"> Describe any agri-tourism that is currently taking place on the property. </label>
         <div class="subtext">Agri-tourism activities are defined in the Agricultural Land Reserve Use Regulation.</div>
         <app-info-banner>
-          Please refer to the Non-Adhering Residential Use page on the ALC website for more information
+          Please refer to the <a>FIXME: Non-Adhering Residential</a> Use page on the ALC website for more information
         </app-info-banner>
         <mat-form-field appearance="outline">
           <textarea
