--- a/portal-frontend/src/app/features/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/pfrs-proposal/pfrs-proposal.component.html
@@ -140,7 +140,7 @@
         agricultural capability of the land.
       </div>
       <app-info-banner>
-        Please refer to <a href="TODO">Contact Us</a> on the ALC website for more detail.
+        Please refer to <a>FIXME: Contact Us</a> on the ALC website for more detail.
       </app-info-banner>
       <app-soil-table
         *ngIf="!isMobile"
@@ -357,7 +357,7 @@
       <label class="subheading2" for="cross-section">Cross Sections</label>
       <div class="subtext">Include North-South and East-West cross sections</div>
       <app-info-banner>
-        Please refer to <a>TODO: Removal of Soil</a> on the ALC website for more information
+        Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
       </app-info-banner>
       <app-file-drag-drop
         id="cross-section"
@@ -377,7 +377,7 @@
         agricultural capability assessment.
       </div>
       <app-info-banner>
-        Please refer to <a>TODO: Removal of Soil</a> on the ALC website for more information
+        Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
       </app-info-banner>
       <app-file-drag-drop
         id="reclamation-plan"
@@ -457,7 +457,7 @@
     <div class="full-row">
       <label class="subheading2" for="noticeOfWork">Notice of Work</label>
       <app-info-banner>
-        Please refer to <a>TODO: Removal of Soil</a> on the ALC website for more information
+        Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
       </app-info-banner>
       <app-file-drag-drop
         id="noticeOfWork"
