--- a/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
@@ -140,7 +140,7 @@
         agricultural capability of the land.
       </div>
       <app-info-banner>
-        Please refer to <a href="TODO">Contact Us</a> on the ALC website for more detail.
+        Please refer to <a>FIXME: Contact Us</a> on the ALC website for more detail.
       </app-info-banner>
       <app-soil-table
         tableHeader="Soil to be Removed"
@@ -272,7 +272,7 @@
       <label class="subheading2" for="cross-section">Cross Sections</label>
       <div class="subtext">Include North-South and East-West cross sections</div>
       <app-info-banner>
-        Please refer to <a>TODO: Removal of Soil</a> on the ALC website for more information
+        Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
       </app-info-banner>
       <app-file-drag-drop
         id="cross-section"
@@ -292,7 +292,7 @@
         agricultural capability assessment.
       </div>
       <app-info-banner>
-        Please refer to <a>TODO: Removal of Soil</a> on the ALC website for more information
+        Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
       </app-info-banner>
       <app-file-drag-drop
         id="reclamation-plan"
