--- a/portal-frontend/src/app/features/edit-submission/proposal/excl-proposal/excl-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/excl-proposal/excl-proposal.component.html
@@ -125,6 +125,7 @@
         (deleteFile)="onDeleteFile($event)"
         (openFile)="openFile($event)"
         [showErrors]="showErrors"
+        [allowMultiple]="true"
         [isRequired]="true"
       ></app-file-drag-drop>
     </div>
@@ -159,6 +160,7 @@
           (deleteFile)="onDeleteFile($event)"
           (openFile)="openFile($event)"
           [showErrors]="showErrors"
+          [allowMultiple]="true"
           [isRequired]="true"
         ></app-file-drag-drop>
       </div>
@@ -176,6 +178,7 @@
           (openFile)="openFile($event)"
           [showErrors]="showErrors"
           [isRequired]="true"
+          [allowMultiple]="true"
         ></app-file-drag-drop>
       </div>
       <div class="full-row">
@@ -189,6 +192,7 @@
           (openFile)="openFile($event)"
           [showErrors]="showErrors"
           [isRequired]="true"
+          [allowMultiple]="true"
         ></app-file-drag-drop>
       </div>
     </div>
