Edit Submission Fixes
* Move confirmation dialog to edit-submission so it only shows for regular submission not ALCS edit submission
* Update Primary Contact component to show Government Contact if it was selected previously
* Re-apply previous bugfix to load proper relations after an update is made

--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -28,8 +28,8 @@
       </button>
       <div class="selected" *ngIf="owner.uuid === selectedOwnerUuid"><mat-icon>check</mat-icon>Primary Contact</div>
     </ng-container>
-    <ng-container *ngIf="isGovernmentUser">
-      <h5>{{ governmentName }} Staff</h5>
+    <ng-container *ngIf="isGovernmentUser || selectedLocalGovernment">
+      <h5>{{ governmentName ?? 'Local / First Nation Government' }} Staff</h5>
       <button
         (click)="onSelectGovernment()"
         *ngIf="!selectedLocalGovernment"
