Show multi-files on separate lines

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/excl-details/excl-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/excl-details/excl-details.component.html
@@ -35,22 +35,28 @@
 
   <div class="subheading2 grid-1">Notice of Public Hearing (Advertisement)</div>
   <div class="grid-double">
-    <a *ngFor="let file of noticeOfPublicHearing" (click)="openFile(file)">
-      {{ file.fileName }}
-    </a>
+    <div *ngFor="let file of noticeOfPublicHearing">
+      <a (click)="openFile(file)">
+        {{ file.fileName }}
+      </a>
+    </div>
   </div>
 
   <div class="subheading2 grid-1">Proof of Signage</div>
   <div class="grid-double">
-    <a *ngFor="let file of proofOfSignage" (click)="openFile(file)">
-      {{ file.fileName }}
-    </a>
+    <div *ngFor="let file of proofOfSignage">
+      <a (click)="openFile(file)">
+        {{ file.fileName }}
+      </a>
+    </div>
   </div>
 
   <div class="subheading2 grid-1">Report of Public Hearing</div>
   <div class="grid-double">
-    <a *ngFor="let file of reportOfPublicHearing" (click)="openFile(file)">
-      {{ file.fileName }}
-    </a>
+    <div *ngFor="let file of reportOfPublicHearing">
+      <a (click)="openFile(file)">
+        {{ file.fileName }}
+      </a>
+    </div>
   </div>
 </div>
