--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/incl-details/incl-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/incl-details/incl-details.component.html
@@ -23,9 +23,11 @@
 
   <div class="subheading2 grid-1">Proposal Map / Site Plan</div>
   <div class="grid-double">
-    <a *ngFor="let file of proposalMap" (click)="openFile(file)">
-      {{ file.fileName }}
-    </a>
+    <div *ngFor="let file of proposalMap">
+      <a (click)="openFile(file)">
+        {{ file.fileName }}
+      </a>
+    </div>
   </div>
 
   <ng-container *ngIf="_applicationSubmission.inclGovernmentOwnsAllParcels !== null">
@@ -40,23 +42,29 @@
   <ng-container *ngIf="_applicationSubmission.inclGovernmentOwnsAllParcels === false">
     <div class="subheading2 grid-1">Notice of Public Hearing (Advertisement)</div>
     <div class="grid-double">
-      <a *ngFor="let file of noticeOfPublicHearing" (click)="openFile(file)">
-        {{ file.fileName }}
-      </a>
+      <div *ngFor="let file of noticeOfPublicHearing">
+        <a (click)="openFile(file)">
+          {{ file.fileName }}
+        </a>
+      </div>
     </div>
 
     <div class="subheading2 grid-1">Proof of Signage</div>
     <div class="grid-double">
-      <a *ngFor="let file of proofOfSignage" (click)="openFile(file)">
-        {{ file.fileName }}
-      </a>
+      <div *ngFor="let file of proofOfSignage">
+        <a (click)="openFile(file)">
+          {{ file.fileName }}
+        </a>
+      </div>
     </div>
 
     <div class="subheading2 grid-1">Report of Public Hearing</div>
     <div class="grid-double">
-      <a *ngFor="let file of reportOfPublicHearing" (click)="openFile(file)">
-        {{ file.fileName }}
-      </a>
+      <div *ngFor="let file of reportOfPublicHearing">
+        <a (click)="openFile(file)">
+          {{ file.fileName }}
+        </a>
+      </div>
     </div>
   </ng-container>
 </div>
