--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -37,8 +37,11 @@
       <app-no-data *ngIf="!submission.primaryContact?.lastName"></app-no-data>
     </div>
     <div class="subheading2 grid-1">
-      <span *ngIf="submission.primaryContact?.type?.code !== 'CRWN'">Organization</span>
+      <span *ngIf="submission.primaryContact?.type?.code !== 'CRWN' && submission.primaryContact?.type?.code !== 'GOVR'"
+        >Organization</span
+      >
       <span *ngIf="submission.primaryContact?.type?.code === 'CRWN'">Ministry/Department Responsible</span>
+      <span *ngIf="submission.primaryContact?.type?.code === 'GOVR'">Department</span>
     </div>
     <div class="grid-double">
       {{ submission.primaryContact?.organizationName }}
