--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.scss
@@ -12,3 +12,14 @@
 .container {
   margin: 32px 0;
 }
+
+.subheading2 {
+  display: flex;
+  gap: 4px;
+}
+
+.icon {
+  height: 20px;
+  width: 20px;
+  font-size: 20px;
+}
