--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/subd/subd.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/subd/subd.component.html
@@ -12,23 +12,28 @@
     <app-no-data *ngIf="component.subdApprovedLots === null || component.subdApprovedLots === undefined"></app-no-data>
   </div>
 </div>
-<div *ngIf="component.subdApprovedLots" class="full-width">
-  <table>
-    <thead>
-      <th>#</th>
-      <th>Type</th>
-      <th>Size (ha)</th>
-      <th>ALR Area (ha)</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let lot of component.subdApprovedLots">
-        <td>{{ lot.number }}</td>
-        <td>{{ lot.type }}</td>
-        <td>{{ lot.size }}</td>
-        <td>
-          <app-inline-number (save)="onSaveAlrArea(lot, $event)" [value]="lot.alrArea?.toString()"></app-inline-number>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div *ngIf="component.lots" class="full-width">
+  <div class="lot-table">
+    <div class="subheading2">#</div>
+    <div class="subheading2">Type</div>
+    <div class="subheading2">Size (ha)</div>
+    <div class="subheading2">ALR Area (ha)</div>
+    <ng-container *ngFor="let lot of component.lots; let i = index">
+      <div>
+        {{ lot.number }}
+        <app-no-data *ngIf="lot.number === null || lot.number === undefined"></app-no-data>
+      </div>
+      <div>
+        {{ lot.type }}
+        <app-no-data *ngIf="lot.type === null || lot.number === undefined"></app-no-data>
+      </div>
+      <div>
+        {{ lot.size }}
+        <app-no-data *ngIf="lot.size === null || lot.number === undefined"></app-no-data>
+      </div>
+      <div>
+        <app-inline-number (save)="onSaveAlrArea(lot, $event)" [value]="lot.alrArea?.toString()"></app-inline-number>
+      </div>
+    </ng-container>
+  </div>
 </div>
