--- a/alcs-frontend/src/app/shared/inline-editors/inline-textarea-edit/inline-textarea-edit.component.html
+++ b/alcs-frontend/src/app/shared/inline-editors/inline-textarea-edit/inline-textarea-edit.component.html
@@ -1,13 +1,13 @@
-<div class="inline-number-wrapper">
-  <span class="left" *ngIf="!isEditing">
-    <a (click)="startEdit()" class="add" *ngIf="!value"> Add text </a>
-    <span *ngIf="value">
+<div>
+  <div (click)="startEdit()" class="content" *ngIf="!isEditing">
+    <div class="text">
+      <span *ngIf="!value" class="placeholder">{{ placeholder}}</span>
       {{ value }}
-    </span>
-    <button *ngIf="value" class="edit-button" mat-icon-button (click)="startEdit()">
-      <mat-icon class="edit-icon">edit</mat-icon>
-    </button>
-  </span>
+    </div>
+    <div matTooltip="Click to edit" class="edit-button" (click)="startEdit()">
+      <mat-icon>edit</mat-icon>
+    </div>
+  </div>
   <div
     class="editing"
     [ngClass]="{
@@ -26,7 +26,6 @@
       (keydown.enter)="confirmEdit()"
       (keydown.escape)="cancelEdit()"
     ></textarea>
-
     <div class="button-container">
       <button mat-button (click)="cancelEdit()">CANCEL</button>
       <button mat-button class="save" (click)="confirmEdit()">SAVE</button>
