--- a/alcs-frontend/src/app/shared/inline-editors/inline-textarea/inline-textarea.component.scss
+++ b/alcs-frontend/src/app/shared/inline-editors/inline-textarea/inline-textarea.component.scss
@@ -1,6 +1,64 @@
 @use '../../../../styles/colors';
 
+.inline-number-wrapper {
+  padding-top: 4px;
+}
+
+.editing {
+  width: 100%;
+  display: inline-block;
+}
+
+.editing.hidden {
+  display: none;
+}
+
+.edit-button {
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.edit-icon {
+  font-size: inherit;
+  line-height: 22px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+
+  button:not(:last-child) {
+    margin-right: 2px !important;
+  }
+}
+
+.add {
+  cursor: pointer;
+}
+
+.save {
+  color: colors.$primary-color;
+}
+
+:host::ng-deep {
+  .mat-form-field-wrapper {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  button mat-icon {
+    overflow: visible;
+  }
+
+  .mat-mdc-icon-button.mat-mdc-button-base {
+    padding: 0 !important;
+  }
+}
+
 .editable {
+  width: 100%;
   display: inline-block;
   cursor: pointer;
   border: 2px solid colors.$primary-color-dark;
@@ -11,63 +69,4 @@
   min-height: 96px;
   margin-left: -8px;
   margin-right: -8px;
-}
-
-.content {
-  display: flex;
-  align-items: stretch;
-  justify-content: space-between;
-  border-radius: 2px;
-  font-size: 16px;
-  border: 2px solid transparent;
-  margin-left: -8px;
-  margin-right: -8px;
-  min-height: 28px;
-}
-
-.text {
-  padding: 8px;
-}
-
-.content:hover {
-  border: 2px solid colors.$grey;
-  border-radius: 4px;
-  cursor: pointer;
-
-  .edit-button {
-    color: colors.$white;
-    background-color: colors.$grey;
-  }
-
-  mat-icon {
-    display: inline-block;
-  }
-}
-
-.edit-button {
-  min-width: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  mat-icon {
-    display: none;
-  }
-}
-
-.editing.hidden {
-  display: none;
-}
-
-.placeholder {
-  font-style: italic;
-  color: colors.$grey;
-}
-
-.editable:hover {
-  border: 2px solid colors.$primary-color;
-}
-
-.save {
-  color: colors.$primary-color;
 }
