--- a/portal-frontend/src/app/features/home/application-list/application-list.component.html
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.html
@@ -20,7 +20,7 @@
       </ng-container>
 
       <ng-container matColumnDef="applicant">
-        <th mat-header-cell *matHeaderCellDef>Applicant Name</th>
+        <th mat-header-cell *matHeaderCellDef>Owner Name</th>
         <td mat-cell *matCellDef="let row">{{ row.applicant || '(Unknown)' }}</td>
       </ng-container>
 
