--- a/portal-frontend/src/app/features/application-details/nfu-details/nfu-details.component.html
+++ b/portal-frontend/src/app/features/application-details/nfu-details/nfu-details.component.html
@@ -66,32 +66,40 @@
       {{ applicationSubmission.nfuFillOriginDescription }}
       <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillOriginDescription"></app-no-data>
     </div>
-    <div class="full-width">
-      <span class="subheading1">Project Dimensions</span>
+    <div class="subheading1 full-width">
+      Fill to be Placed <app-updated-banner *ngIf="updatedFields.includes('nfuToPlaceVolume')"></app-updated-banner>
     </div>
-    <div class="subheading2 grid-1">
-      Total fill placement area (ha)
-      <app-updated-banner *ngIf="updatedFields.includes('nfuTotalFillPlacement')"></app-updated-banner>
-    </div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuTotalFillPlacement }}
-      <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuTotalFillPlacement"></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">
-      Maximum depth of material to be placed as fill (m)
-      <app-updated-banner *ngIf="updatedFields.includes('nfuMaxFillDepth')"></app-updated-banner>
-    </div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuMaxFillDepth }}
-      <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuMaxFillDepth"></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">
-      Volume of material to be placed as fill (m3)
-      <app-updated-banner *ngIf="updatedFields.includes('nfuFillVolume')"></app-updated-banner>
-    </div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuFillVolume }}
-      <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.nfuFillVolume"></app-no-data>
+    <div class="full-width soil-table">
+      <div class="grid-1"><strong>Volume</strong></div>
+      <div class="grid-2">
+        {{ applicationSubmission.nfuFillVolume }}
+        <span *ngIf="applicationSubmission.nfuFillVolume !== null">m<sup>3</sup></span>
+        <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuFillVolume === null"></app-no-data>
+      </div>
+      <div class="grid-1"><strong>Area</strong></div>
+      <div class="grid-2">
+        {{ applicationSubmission.nfuTotalFillPlacement }}
+        <span *ngIf="applicationSubmission.nfuTotalFillPlacement !== null">ha</span>
+        <app-no-data
+          [showRequired]="showErrors"
+          *ngIf="applicationSubmission.nfuTotalFillPlacement === null"
+        ></app-no-data>
+      </div>
+      <div class="grid-1"><strong>Maximum Depth</strong></div>
+      <div class="grid-2">
+        {{ applicationSubmission.nfuMaxFillDepth }}
+        <span *ngIf="applicationSubmission.nfuMaxFillDepth !== null">m</span>
+        <app-no-data [showRequired]="showErrors" *ngIf="applicationSubmission.nfuMaxFillDepth === null"></app-no-data>
+      </div>
+      <div class="grid-1"><strong>Average Depth</strong></div>
+      <div class="grid-2">
+        {{ applicationSubmission.nfuAverageFillDepth }}
+        <span *ngIf="applicationSubmission.nfuAverageFillDepth !== null">m</span>
+        <app-no-data
+          [showRequired]="showErrors"
+          *ngIf="applicationSubmission.nfuAverageFillDepth === null"
+        ></app-no-data>
+      </div>
     </div>
     <div class="full-width">
       <span class="subheading1">Project Duration</span>
